# audit

./: .env.example  .gitignore  CODEBASE_REVIEW.md  Cargo.toml  DEPLOYMENT_FIX.md  ORGANIZATION_COMPLETE.md  QUICKFIX.md  README.md  TODO_INTEGRATION.md  add-api-key.sh  askama.toml  docker-compose.advanced.yml  docker-compose.prod.yml  docker-compose.yml  fix-permissions.sh  run.sh  todo.md
.rustassistant/: context.md  manifest.json  symbols.json  tree.txt
.sqlx/: query-032a0961b261f9fe600aa50118160ea3b5864f2b5bd926dce7a83a29a550557d.json  query-13f74b3fc93dfc34d8f0888a16a3216a49ed73c763a93ac5af8f970283971b4b.json  query-1d5d52153c5f20e7117919a9fae7a7c5c6dc913204d0cf35da1b0278c2e2058d.json  query-73041cab580391d702b647d84cb40202aaffb7973841af055698ad1ff7180812.json  query-832b3a8b0b27d0a55d99f824d10bc87b5328b04cc3257b414dd8091e5a6152d0.json
config/: docs_schema_profile.toml  env.example.txt  research.toml
docker/: DEPLOYMENT_CHECKLIST.md  Dockerfile  Dockerfile.cli  Dockerfile.web  QUICKREF.md  README.md
docs/: ACTION_PLAN.md  APPLY_FIXES.md  CACHE_QUICK_START.md  CENTRALIZED_CACHE_COMPLETE.md  CLEANUP_SUMMARY.md  COMPILE_TROUBLESHOOTING.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  DATA_LAYER_FIXES.md  DOCKER_DEPLOYMENT.md  DOCKER_QUICK_START.md  ERROR_FIXES_SUMMARY.md  GETTING_STARTED.md  GITHUB_IMPLEMENTATION_COMPLETE.md  GITHUB_INTEGRATION.md  GITHUB_INTEGRATION_SUMMARY.md  GITHUB_NEXT_STEPS.md  IMPLEMENTATION_ROADMAP.md  INDEX.md  INTEGRATION_FIXES_COMPLETED.md  INTEGRATION_STATUS.md  INTEGRATION_SUMMARY.md  LATEST_UPDATE.md  PROGRESS_CHECKLIST.md  PROJECT_STATUS.md  QUICK_INTEGRATION.md  QUICK_START_GITHUB.md  QUICK_START_IMPLEMENTATION.md  QUICK_START_NEW_FEATURES.md  RASPBERRY_PI_GUIDE.md  REPO_MANAGEMENT_GUIDE.md  RESEARCH_BACKUP_INTEGRATION.md  RESEARCH_GUIDE.md  RESEARCH_TOPICS.md  REVIEW_COMPLETE.md  REVIEW_PASS_FIXES.md  REVIEW_SUMMARY.md  ROADMAP.md  SESSION_SUMMARY.md  SETUP_COMPLETE.md  SQLITE_CACHE_CLI_INTEGRATION_COMPLETE.md  (+6 more)
examples/: github_background_sync.rs  github_migration.rs  github_test.rs  rag_server.rs  scan_actions_repo.rs  test_search.rs
migrations/: 001_simplified_tasks.sql  002_github_integration.sql  007_ideas.sql  008_fix_scan_events.sql  009_queue_items.sql  010_scan_checkpoints.sql  011_scan_progress_enhanced.sql  012_add_review_requested.sql  013_add_task_core_columns.sql  014_add_cache_hash.sql  020_documents_integer_to_bigint.sql
scripts/: README_REPO_MANAGEMENT.md  add-api-key.sh  batch_cache.py  build-docker.sh  cache_scan_repo.sh  dashboard.sh  fix-permissions.sh  generate-secrets.sh  manage_repos.sh  quick_setup.sh  repo_manager.py  setup-pi.sh  simple_cache_scan.sh  test-ci-fix.sh  test-content-format.sh  test-deployment.sh  test-xai.sh  (+1 more)
todo/audit/: .dockerignore  .env.example  .llm-audit.toml  Cargo.toml  README.md  ci-cd-llm-audit.yml
todo/audit/config/: docs_schema_profile.toml  janus_profile.toml
todo/audit/context-bundle/: files-to-analyze.txt
todo/audit/docs/: 3PHASE_WORKFLOW_GUIDE.md  API_TROUBLESHOOTING.md  AUDIT_ENHANCEMENTS_SUMMARY.md  AUDIT_REVIEW_SUMMARY.md  AUDIT_UPDATE_SUMMARY.md  BEFORE_AFTER_COMPARISON.md  CHANGELOG_FIXES.md  CI_FIX_SUMMARY.md  CI_LLM_AUDIT_REVIEW.md  DEPLOYMENT_CHECKLIST.md  ENHANCED_AUDIT_FEATURES.md  ENHANCEMENTS_SUMMARY.md  EXECUTIVE_SUMMARY.md  FINAL_FIX_SUMMARY.md  FINAL_XAI_INTEGRATION_SUMMARY.md  FIXES_APPLIED.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE_CATEGORY_UPDATE.md  INFRASTRUCTURE_QUICK_REF.md  ISSUE_RESOLUTION.md  JANUS_AUDIT_INDEX.md  JANUS_AUDIT_QUICK_REF.md  JANUS_CONTEXT.md  JANUS_FRAMEWORK_INTEGRATION.md  JANUS_LLM_SYSTEM_PROMPT.md  JANUS_MAPPING.md  LATEST_FIX.md  LATEST_FIXES.md  LLM_AUDIT_DEPLOYMENT_GUIDE.md  LLM_AUDIT_GUIDE.md  LLM_AUDIT_OPTIMIZATION_GUIDE.md  LLM_AUDIT_QUICK_REF.md  MIGRATION_GUIDE.md  NEUROMORPHIC_VISUALIZATION.md  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_EXECUTIVE_SUMMARY.md  PRICING_UPDATE_DECEMBER_2024.md  QUESTIONNAIRE_DEBUG.md  (+28 more)
todo/audit/examples/: janus_integration.rs
todo/audit/scripts/: analyze-costs.sh  run.sh  test-workflow-parsing.sh  test-xai-api.sh
todo/audit/src/: config.rs  context.rs  enhanced_scanner.rs  janus.rs  lib.rs  llm_audit.rs  neuromorphic_mapper.rs  research.rs  server.rs
todo/audit/static/: README.md
todo/audit/static/css/: styles.css
todo/audit/static/js/: app.js
(+182 files in other folders)
