# ============================================================================
# FKS Audit Service
# ============================================================================
# Code audit and static analysis service for the FKS trading system.
# Provides LLM-powered code review, TODO scanning, and CI/CD integration.
#
# Part of the root FKS workspace (../../Cargo.toml)
# ============================================================================

[package]
name = "fks-audit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Code audit and static analysis service for FKS"

[dependencies]
# ---------------------------------------------------------------------------
# Web Framework
# ---------------------------------------------------------------------------
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# ---------------------------------------------------------------------------
# Serialization
# ---------------------------------------------------------------------------
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# ---------------------------------------------------------------------------
# HTTP Client (for LLM API)
# ---------------------------------------------------------------------------
reqwest = { workspace = true }

# ---------------------------------------------------------------------------
# Git Operations
# ---------------------------------------------------------------------------
git2 = { workspace = true }
ignore = { workspace = true }

# ---------------------------------------------------------------------------
# File System Operations
# ---------------------------------------------------------------------------
walkdir = { workspace = true }

# ---------------------------------------------------------------------------
# Regular Expressions
# ---------------------------------------------------------------------------
regex = { workspace = true }

# ---------------------------------------------------------------------------
# Error Handling
# ---------------------------------------------------------------------------
anyhow = { workspace = true }
thiserror = { workspace = true }

# ---------------------------------------------------------------------------
# Logging & Tracing
# ---------------------------------------------------------------------------
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# ---------------------------------------------------------------------------
# Configuration
# ---------------------------------------------------------------------------
config = { workspace = true }
dotenvy = { workspace = true }

# ---------------------------------------------------------------------------
# Time & Date
# ---------------------------------------------------------------------------
chrono = { workspace = true }

# ---------------------------------------------------------------------------
# Cryptography (for hashing)
# ---------------------------------------------------------------------------
sha2 = { workspace = true }

# ---------------------------------------------------------------------------
# Async Runtime
# ---------------------------------------------------------------------------
futures = { workspace = true }

# ---------------------------------------------------------------------------
# CLI
# ---------------------------------------------------------------------------
clap = { workspace = true }

# ---------------------------------------------------------------------------
# Utilities
# ---------------------------------------------------------------------------
uuid = { workspace = true }
rand = { workspace = true }

# ---------------------------------------------------------------------------
# URL Parsing (for SSRF prevention)
# ---------------------------------------------------------------------------
url = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "audit-server"
path = "src/bin/server.rs"

[[bin]]
name = "audit-cli"
path = "src/bin/cli.rs"
